package com.example.demo.Models;

public class Automovel {
    
}
