package com.example.demo.Models;

import jakarta.persistence.*;

@Entity
public class Client extends User{
    
}
