package com.example.demo.Models.enums;

public enum StatusPedido {
    EM_ANALISE,
    APROVADO,
    NEGADO
}
