package com.example.demo.Models.enums;

public enum TipoContrato {
    PROP_CLIENT,
    PROP_COMPANY,
    PROP_BANK
}
